--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Store</title>
+    <link rel="shortcut icon" href="./icons/icons8-favicon2.png" type="image/x-icon">
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
+
+
 <body>
-    
+    <header>
+        <h1>MP BookStore</h1>
+    </header>
+
+
+
+
 </body>
 </html>
