add new div container

--- a/index.html
+++ b/index.html
@@ -7,17 +7,31 @@
     <link rel="shortcut icon" href="./icons/icons8-favicon2.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/books.css">
+
 </head>
-
-
-
 <body>
+    
     <header>
         <h1>MP BookStore</h1>
     </header>
 
+<div class="content_section">
 
+    <div class="book_container">
+        <div>
+            <h1>Buch</h1>
+        </div>
+        <div class="book_img_section">Bild</div>
+        <div class="book_info_section">Buch Infos</div>
+        <div class="book_comment_section">Kommentare</div>
+        <div class="book_input_section">
+            <input type="text" placeholder="Schreibe dein Kommentar ...">
+            <button>send</button>
+        </div>
+    </div>
 
+</div>
 
 </body>
 </html>
