--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Store</title>
-    <link rel="shortcut icon" href="./icons/icons8-favicon2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icons/icons8-favicon2.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./styles/books.css">
@@ -20,14 +20,14 @@
 
     <div class="book_container">
         <div>
-            <h1>Buch</h1>
+            <h1>Buchtitel</h1>
         </div>
-        <div class="book_img_section">Bild</div>
+        <div class="book_img_section"><img src="./assets/img/buch03.png" alt=""></div>
         <div class="book_info_section">Buch Infos</div>
         <div class="book_comment_section">Kommentare</div>
         <div class="book_input_section">
             <input type="text" placeholder="Schreibe dein Kommentar ...">
-            <button>send</button>
+            <a class="send_btn" href="#"><img src="./assets/icons/icons8-gesendet.png" alt=""></a>
         </div>
     </div>
 
