--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./styles/books.css">
 
+    <script src="./scripts/db.js"></script>
+
 </head>
 <body>
     
@@ -19,6 +21,7 @@
 <div class="content_section">
 
     <div class="book_container">
+
         <div>
             <h1>Buchtitel</h1>
         </div>
@@ -29,6 +32,7 @@
             <input type="text" placeholder="Schreibe dein Kommentar ...">
             <a class="send_btn" href="#"><img src="./assets/icons/icons8-gesendet.png" alt=""></a>
         </div>
+
     </div>
 
 </div>
