--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./styles/books.css">
 
+    
     <script src="./scripts/db.js"></script>
+    <script src="./script.js"></script>
 
 </head>
 <body>
@@ -35,6 +37,7 @@
 
     </div>
 
+    <div id="test"></div>
 </div>
 
 </body>
