--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     
     <script src="./scripts/db.js"></script>
     <script src="./script.js"></script>
+    <script src="./scripts/template.js"></script>
 
 </head>
-<body>
+<body onload="renderBooks()">
     
     <header>
         <h1>MP BookStore</h1>
