--- a/index.html
+++ b/index.html
@@ -21,24 +21,28 @@
         <h1>MP BookStore</h1>
     </header>
 
+
+
+<div class="test_section">
+    <div >
+        <h1>Buchtitel</h1>
+    </div>
+    <div class="book_img_section"><img src="./assets/img/buch03.png" alt=""></div>
+    <div class="book_info_section">Buch Infos</div>
+    <div class="book_comment_section">Kommentare</div>
+    <div class="book_input_section">
+        <input type="text" placeholder="Schreib deinen Kommentar ...">
+        <a class="send_btn" href="#"><img src="./assets/icons/icons8-gesendet.png" alt=""></a>
+    </div>
+</div>
+<div class="seperator"></div>
+
+
+
 <div class="content_section">
 
-    <div class="book_container">
+    <div id="book_container" class="book_container"></div>
 
-        <div>
-            <h1>Buchtitel</h1>
-        </div>
-        <div class="book_img_section"><img src="./assets/img/buch03.png" alt=""></div>
-        <div class="book_info_section">Buch Infos</div>
-        <div class="book_comment_section">Kommentare</div>
-        <div class="book_input_section">
-            <input type="text" placeholder="Schreibe dein Kommentar ...">
-            <a class="send_btn" href="#"><img src="./assets/icons/icons8-gesendet.png" alt=""></a>
-        </div>
-
-    </div>
-
-    <div id="test"></div>
 </div>
 
 </body>
