--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div id="price_field" class="price">Price</div>
         <div id="like_field" class="likes">
             <p>1234</p>
-            <a href="#">
-                <img src="./assets/icons/icons8-like-gefüllt.png" alt="">
+            <a id="like_btn" onclick="likeButton()" href="#">
+                <img src="./assets/icons/icons8-like-gefüllt.png"  alt="">
             </a>
         </div>
     </div>
@@ -79,6 +79,7 @@
 
         <div class="input_container">
             <input id="input" class="input_field" type="text" placeholder="Schreib deinen Kommentar ...">
+           <!-- oncklick setzen -->
             <a class="send_button" href="#">
                 <img src="./assets/icons/icons8-papierflieger.png" alt="">
             </a>
