--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="container5">
         <h4>Kommentare</h4>
         <div class="container6">
-            <div class="overflow">
+            <div id="comment_section" class="overflow">
                 <span>[Tester123]</span>
                 <span>: Jedoch ist das klassische Personal Training auf Dauer ein recht teurer Spaß und sollte vorwiegend Trainingsanfängern oder betreuungsintensiven Personen vorbehalten sein.</span>
             </div>
