--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="shortcut icon" href="./assets/icons/icons8-favicon2.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="style.css" />
-    <!-- <link rel="stylesheet" href="./styles/books.css"> -->
-    <link rel="stylesheet" href="./styles/testformat.css" />
+    <link rel="stylesheet" href="./styles/books.css">
 
     <script src="./scripts/db.js"></script>
     <script src="./script.js" defer></script>
@@ -22,7 +21,7 @@
       </div>
     </header>
 
-    <div class="test_container_section">
+    <!-- <div class="test_container_section">
       <div class="container1">
         <h1>Buchtitel</h1>
       </div>
@@ -83,7 +82,7 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
     <div class="content_section">
