--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="./script.js" defer></script>
     <script src="./scripts/template.js"></script>
   </head>
-  <body onload="renderBooks()">
+  <body onload="init()">
     <header>
       <div class="header_content">
         <img src="./assets/icons/icons8-favicon2.png" alt="" />
