--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./assets/icons/icons8-favicon2.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./styles/books.css">
+    <link rel="stylesheet" href="./styles/books.css" />
 
     <script src="./scripts/db.js"></script>
     <script src="./script.js" defer></script>
@@ -20,13 +20,8 @@
         <h1>BookStore</h1>
       </div>
     </header>
-
-
     <div class="content_section">
-
       <div id="book_container"></div>
-
     </div>
-    
   </body>
 </html>
