--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </header>
     <div class="content_section">
-      <div id="book_container"></div>
+      <div id="book_container" class="book_container_style"></div>
     </div>
   </body>
 </html>
