change style and add footer

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     </header>
     <div class="content_section">
       <div id="book_container" class="book_container_style"></div>
+      <footer>
+        <a href="https://icons8.de/">Icons by icons8.de</a>
+      </footer>
     </div>
   </body>
 </html>
